test/types/records/generic/named-field-q-2.good
named-field-q-2.chpl:15: error: unresolved call 'f3(RR(5,7))'
named-field-q-2.chpl:11: note: this candidate did not match: f3(arg2: RR(p1 = ?))
named-field-q-2.chpl:11: note: because an argument was incompatible
