test/types/records/generic/named-field-q-2.compopts
# compile with --minimal-modules just because we can
--minimal-modules
